<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <SwitchPreference
            app:key="night_mode"
            app:title="@string/settings_dark_mode"
            app:summaryOn="@string/night_mode"
            app:summaryOff="@string/day_mode"
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:icon="@drawable/ic_volume"/>
        <Preference
            app:key="delete_ads"
            app:title="@string/settings_delete_ads"
            app:summary="@string/settings_delete_ads_summary"
            app:iconSpaceReserved="true"
            app:icon="@drawable/ic_monetization"/>
        <Preference
            app:key="rate_app"
            app:title="@string/settings_rate_app"
            app:summary="@string/settings_rate_app_summary"
            app:iconSpaceReserved="true"
            app:icon="@drawable/ic_star"/>
        <Preference
            app:key="more_apps"
            app:title="@string/settings_more_apps"
            app:summary="@string/settings_more_apps_summary"
            app:iconSpaceReserved="true"
            app:icon="@drawable/ic_store"/>
        <Preference
            app:key="share"
            app:title="@string/settings_share"
            app:summary="@string/settings_share_summary"
            app:iconSpaceReserved="true"
            app:icon="@drawable/ic_share"/>
        <Preference
            app:key="version"
            app:title="@string/settings_version"
            app:iconSpaceReserved="true"
            app:icon="@drawable/ic_version"/>
</PreferenceScreen>
