<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/stamp_iso"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_stamp" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:src="@drawable/stamp_certified"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_stamp"  />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent" >

        <TextView
            android:id="@+id/textTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="10 años y 3 meses"
            android:gravity="center"
            android:textAppearance="@style/Regular.TextColor.Medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="parent" />

        <com.alvaroquintana.edadperruna.ui.components.AspectRatioImageView
            android:id="@+id/imageBreed"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            tools:src="@tools:sample/avatars"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:contentDescription="@string/dog_image"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/textTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/textBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Malamute"
            android:textAppearance="@style/Regular.TextColor.Medium"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/imageBreed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textEqualTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equal_to"
            android:textAppearance="@style/Bold.TextColor.Large"
            android:gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textBreed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="40 años y 20 meses"
            android:textAppearance="@style/Regular.TextColor.Medium"
            android:gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textEqualTo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textResultDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/of_people"
            android:textAppearance="@style/Regular.TextColor.Medium"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textResult"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textResultCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Su perro se encuentra en la vejez"
            android:textAppearance="@style/Regular.TextColor.Medium"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/textResultDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/textResultInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_puppy"
            android:gravity="center"
            android:textAppearance="@style/Regular.TextColor.Medium"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/textResultCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:theme="@style/buttonStyle"
        android:text="@string/try_again"
        android:layout_gravity="bottom|center"
        app:layout_constraintBottom_toTopOf="@+id/otherAppText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/otherAppText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_apps"
        android:textAppearance="@style/Regular.TextColor.Medium"
        app:layout_constraintBottom_toTopOf="@+id/recyclerviewOtherApps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewOtherApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_app" />

    <ImageView
        android:id="@+id/imagenLoading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:src="@drawable/animated_dog"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/otherAppText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/loading_image" />
</androidx.constraintlayout.widget.ConstraintLayout>