<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:scaleType="centerCrop"
        android:src="@drawable/wallpaper_main"
        android:contentDescription="@string/dog_image" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/backgroundTransparent"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_marginTop="@dimen/height_status_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:layout_gravity="start"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back_btn" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                tools:text="@string/app_name"
                android:layout_marginEnd="60dp"
                android:textAppearance="@style/Bold.TextColor.Large" />

            <ImageView
                android:id="@+id/imagenSettings"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_settings"
                android:layout_gravity="end"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:visibility="gone"
                android:contentDescription="@string/settings"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutMain"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout="@layout/main_fragment" >
        <fragment
            android:id="@+id/nav_host_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="androidx.navigation.fragment.NavHostFragment"
            app:navGraph="@navigation/mobile_navigation"
            app:defaultNavHost="true" />
    </FrameLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="FULL_BANNER"
        ads:adUnitId="@string/BANNER_LIST"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>