<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/parentLayout"
        android:textAppearance="@style/Regular.TextColorLight.Medium" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/section_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditTextTheme">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:textAppearance="@style/Regular.TextColorLight.Medium"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/month"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/fieldYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditTextTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:textAppearance="@style/Regular.TextColorLight.Medium"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldBreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_breed"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/fieldMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/EditTextTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:focusable="false"
            android:drawableEnd="@drawable/ic_expand_more"
            android:textAppearance="@style/Regular.TextColorLight.Medium"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>